<resources>
    <string-array name="comboitems">
        <item>0,001</item>
        <item>0,01</item>
        <item>0,1</item>
        <item>1</item>
        <item>10</item>
        <item>100</item>
    </string-array>
    <string name="app_name">Guimaster</string>
    <string name="parentView">parentView</string>
    <string name="bcontroller">Manuelle Ansteuerung</string>
    <string name="bcanvas">Zeichenfläche</string>
    <string name="bimportfile">Maschinenbefehldatei importieren</string>
    <string name="bimportpicture">Bild importieren</string>
    <string name="dimension_fragment">Bitte Dimensionen des Werkstücks angeben (in mm):</string>
    <string name="length">Länge :</string>
    <string name="width">Breite :</string>
    <string name="ok">Bestätigen</string>
    <string name="back">Zurück</string>
    <string name="values">Bitte gültige Werte eingeben!</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="cncsign">Logo ADV auf Alu Platte</string>
    <string name="wzmpos">Werkzeugmaschine kann nicht weiter in diese Richtung gefahren werden</string>
    <string name="loading.">Lädt.</string>
    <string name="loading..">Lädt..</string>
    <string name="loading...">Lädt...</string>
    <string name="device_not_attached">USB-Gerät nicht gefunden, bitte erneut versuchen</string>
    <string name="okay">OK</string>
    <string name="permission">App benötigt Zugriff auf USB-Gerät, bitte erneut versuchen</string>
    <string name="draw">Zeichnen</string>
    <string name="erase">Radieren</string>
    <string name="addpicture">Bild hinzufügen</string>
    <string name="toolswitch">Tool an/aus</string>
    <string name="stepwidth">Schrittweite in mm</string>
    <string name="steptoolon">Schrittweite ist während Benutzung des Tools auf 1mm begrenzt</string>
    <string name="clearbtn">Clear</string>
    <string name="strokewidth">Stiftstärke</string>
    <string name="addsvg">Svg hinzufügen</string>
    <string name="preview">Vorschau anzeigen</string>
    <string name="mill">Fräsvorgang starten</string>
    <string name="takepic">Bild aufnehmen</string>
    <string name="accuracy">Genauigkeit anpassen</string>
    <string name="yourpic">Ausgewähltes Bild</string>
    <string name="milldescription">Fräsvorgang mit gegebenen Parametern starten?</string>
    <string name="backenderror">Fehler im Backend</string>
    <string name="processdialog">Befehle werden übertragen, Verbindung nicht trennen</string>
    <string name="debug">Block wurde übertragen</string>

</resources>